# maomaowm

./: .gitignore  IM.h  LICENSE  Makefile  README.md  autostart.sh  client.h  config.conf  config.def.h  config.h  config.mk  dispatch.h  dwl.c  flake.nix  main.c  maomao.c  maomao.desktop  meson.build  parse_config.h  plume.desktop  preset_config.h  util.c
protocols/: meson.build
waybar/: config
wofi/: config  style.css
